fix the alignment of the form

--- a/style.css
+++ b/style.css
@@ -62,6 +62,16 @@ form h1 {
 .email label {
   display: block;
   margin-top: 10px;
+
+  font-size: 10px;
+  font-weight: lighter;
+  margin-bottom: 5px;
+}
+
+.querytype label,
+.consent label {
+  font-size: 10px;
+  font-weight: lighter;
 }
 
 input {
@@ -111,7 +121,6 @@ input[type="radio"] {
   border-radius: 5px;
 
   display: flex;
-  align-items: center;
   gap: 5px;
 }
 
@@ -148,9 +157,7 @@ button {
   border-radius: 5px;
   font-size: 10px;
 }
-input:not(:placeholder-shown) {
-  border-color: var(--color-teal);
-}
+
 b {
   color: var(--color-teal);
 }
@@ -162,10 +169,10 @@ b {
   gap: 10px;
 }
 
-label,
-h4 {
+h2 {
   font-size: 10px;
-  margin-bottom: 5px;
+  font-weight: lighter;
+  margin: 10px 0 5px 0;
 }
 
 .message {
@@ -180,6 +187,8 @@ h4 {
 .message p {
   font-size: 13px;
 }
+
+/* Phone layout */
 @media (max-width: 720px) {
   .fullname {
     display: block;
